[gd_scene load_steps=3 format=3 uid="uid://dhiyq3vdqtigr"]

[ext_resource type="Script" path="res://scenes/transitional/main_menu.gd" id="1_drdet"]
[ext_resource type="PackedScene" uid="uid://bket0bpc83r0a" path="res://scenes/levels/test_level.tscn" id="2_pcpja"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_drdet")
first_level = ExtResource("2_pcpja")

[node name="MenuLayer" type="CanvasLayer" parent="."]

[node name="MainMenuUI" type="Control" parent="MenuLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuLayer/MainMenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.4
anchor_right = 0.75
anchor_bottom = 0.6
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuLayer/MainMenuUI/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MenuLayer/MainMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[node name="HSeparator" type="HSeparator" parent="MenuLayer/MainMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="OptionsButton" type="Button" parent="MenuLayer/MainMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[node name="HSeparator2" type="HSeparator" parent="MenuLayer/MainMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="MenuLayer/MainMenuUI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit Game"

[connection signal="pressed" from="MenuLayer/MainMenuUI/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MenuLayer/MainMenuUI/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuLayer/MainMenuUI/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
